chore: some desc added to test